# mag

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile
src/: actions.rs  app.rs  app_state.rs  canvas.rs  event_loop.rs  events.rs  handlers.rs  main.rs  program_state.rs  renderer.rs  screenshot.rs  system_tray.rs  texture.rs  tray.rs  user_event.rs  utils.rs  window.rs
src/handlers/: keyboard_handlers.rs
src/utils/: keyboard.rs  mouse.rs  screen.rs  timer.rs  zoom.rs
